# pkg/helper/request/cartReq.go
@@ -1,14 +1,14 @@
 package request
 
 type Cartreq struct {
-	ProductId int
-	UserID    int `json:"-"`
+	UserID int    `json:"-"`
+	Sku    string `json:"sku" binding:"required"`
 }
 
 type Addcount struct {
-	UserID    int `json:"-"`
-	ProductId int `json:"product_id" binding:"required"`
-	Count     int `json:"count" binding:"omitempty,gte=1"`
+	UserID int    `json:"-"`
+	Sku    string `json:"sku" binding:"required"`
+	Count  int    `json:"count" binding:"omitempty,gte=1"`
 }
 
 type CartItems struct {
